# flactag

./: .gitignore  Album.cc  Album.h  AlbumInfoWindow.cc  AlbumInfoWindow.h  AlbumRequest.cc  AlbumRequest.h  AlbumWindow.cc  AlbumWindow.h  CHANGELOG.txt  CMakeLists.txt  CommandLine.cc  CommandLine.h  ConfigFile.cc  ConfigFile.h  CoverArt.cc  CoverArt.h  CoverArtFetch.cc  CoverArtFetch.h  Cuesheet.cc  Cuesheet.h  CuesheetTrack.cc  CuesheetTrack.h  DiscIDWrapper.cc  DiscIDWrapper.h  DiskIDCalculate.cc  DiskIDCalculate.h  ErrorLog.cc  ErrorLog.h  FileNameBuilder.cc  FileNameBuilder.h  FlacInfo.cc  FlacInfo.h  HTTPFetch.cc  HTTPFetch.h  Makefile  Makefile.am  Makefile.raw  MusicBrainzInfo.cc  MusicBrainzInfo.h  (+40 more)
MusicBrainz/: Alias.cc  Alias.h  Annotation.cc  Annotation.h  Artist.cc  Artist.h  ArtistCredit.cc  ArtistCredit.h  Attribute.cc  CDStub.h  Collection.cc  Collection.h  Disc.cc  Disc.h  DiscList.cc  DiscList.h  FreeDBDisc.cc  FreeDBDisc.h  GenericList.h  ISRC.cc  ISRC.h  Label.cc  Label.h  LabelInfo.cc  LabelInfo.h  LabelInfoList.cc  LabelInfoList.h  Lifespan.h  ListTest.cc  Makefile  Medium.cc  Medium.h  MediumList.cc  MediumList.h  Metadata.cc  Metadata.h  MusicBrainz-adh.cc  MusicBrainz-adh.h  NameCredit.cc  NameCredit.h  (+30 more)
MusicBrainz/include/musicbrainz4/: Annotation.h  Artist.h  ArtistCredit.h  Attribute.h  CDStub.h  Collection.h  Disc.h  FreeDBDisc.h  GenericList.h  ISRC.h  Label.h  LabelInfo.h  Lifespan.h  Medium.h  Metadata.h  NameCredit.h  NoneMBTrack.h  PUID.h  Query.h  Rating.h  Recording.h  Relation.h  Release.h  ReleaseGroup.h  Tag.h  TextRepresentation.h  Track.h  UserTag.h  Work.h
MusicBrainz/src/: Alias.cc  Annotation.cc  Artist.cc  ArtistCredit.cc  Attribute.cc  Collection.cc  Disc.cc  FreeDBDisc.cc  ISRC.cc  LabelInfo.cc  ListTest.cc  Makefile  Medium.cc  Metadata.cc  NameCredit.cc  PUID.cc  Query.cc  Recording.cc  Release.cc  ReleaseGroup.cc  Track.cc  UserRating.cc  mbtest.cc
adh-musicbrainz/: AlbumWindow.cc  AlbumWindow.h  ConfigFile.cc  CoverArt.cc  Cuesheet.cc  FileNameBuilder.cc  FileNameBuilder.h  FlacInfo.cc  Makefile  MusicBrainzInfo.cc  MusicBrainzInfo.h  ScrollableWindow.cc  TrackWindow.cc  UTF8Tag.cc  flactag.cc  flactag.h
adh-musicbrainz-enhancements/: Album.cc  CommandLine.cc  ConfigFile.cc  Cuesheet.h  CuesheetTrack.cc  FlacInfo.cc  FlacInfo.h  Makefile  MusicBrainzInfo.cc  MusicBrainzInfo.h  TagName.cc  TagName.h  Track.cc  base64.h  flactag.1.txt  flactag.txt
adh-musicbrainz-enhancements/debian/: rules
adh-musicbrainz/MusicBrainz/: Annotation.cc  ArtistCredit.cc  Attribute.cc  Attribute.h  CDStub.cc  FreeDBDisc.h  GenericList.h  HTTPFetch.cc  HTTPFetch.h  ISRC.cc  ISRC.h  Label.cc  LabelInfo.cc  LabelInfo.h  Lifespan.cc  Lifespan.h  ListTest.cc  Makefile  Medium.h  Metadata.cc  Metadata.h  MusicBrainz-adh.cc  MusicBrainz-adh.h  NameCredit.h  NoneMBTrack.cc  NoneMBTrack.h  PUID.cc  PUID.h  Rating.h  Recording.h  Relation.cc  Relation.h  Release.cc  Release.h  ReleaseGroup.cc  Tag.cc  Tag.h  TextRepresentation.cc  TextRepresentation.h  Track.cc  (+6 more)
adh-musicbrainz/MusicBrainz/include/musicbrainz4/: Alias.h  Annotation.h  Artist.h  ArtistCredit.h  Attribute.h  CDStub.h  Collection.h  Disc.h  FreeDBDisc.h  GenericList.h  ISRC.h  Label.h  LabelInfo.h  Lifespan.h  Medium.h  Metadata.h  NameCredit.h  NoneMBTrack.h  PUID.h  Query.h  Rating.h  Recording.h  Relation.h  Release.h  ReleaseGroup.h  Tag.h  TextRepresentation.h  Track.h  UserRating.h  UserTag.h  Work.h
adh-musicbrainz/MusicBrainz/src/: ArtistCredit.cc  CDStub.cc  Disc.cc  HTTPFetch.cc  Label.cc  Lifespan.cc  ListTest.cc  Makefile  Medium.cc  Metadata.cc  NoneMBTrack.cc  Query.cc  Rating.cc  Relation.cc  Release.cc  Tag.cc  TextRepresentation.cc  UserTag.cc  Work.cc  mbtest.cc
adh-musicbrainz/debian/: watch
autotools/: CommandLine.cc  CoverArt.h  DiscIDWrapper.cc  DiscIDWrapper.h  ErrorLog.cc  ErrorLog.h  FileNameBuilder.cc  FlacInfo.cc  HTTPFetch.cc  Makefile.am  TagsWindow.cc  TagsWindow.h  TrackWindow.h  UTF8Tag.cc  UTF8Tag.h  WriteInfo.cc  WriteInfo.h  configure.ac  discid.cc  flactag.cc  flactag.h  ripflac.in  tocfix.sed
debian/: README.Debian  changelog  control  copyright  docs  files  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  rules  watch
developer/: make-release.sh  release-process.txt  upload-release.sh
